[gd_scene load_steps=5 format=3 uid="uid://biph1omdy7gm0"]

[ext_resource type="Script" path="res://scenes/JohnW.gd" id="1_pqfwo"]
[ext_resource type="Texture2D" uid="uid://v4pjqpjecjau" path="res://Characters/JohnW.png" id="2_usxrx"]
[ext_resource type="Texture2D" uid="uid://c8r8xmyj0etlb" path="res://Characters/Exclamation_Mark.png" id="3_uplsv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tthqj"]
size = Vector2(657.22, 660.554)

[node name="JohnW" type="Area2D"]
position = Vector2(273, 539)
scale = Vector2(0.138462, 0.138462)
script = ExtResource("1_pqfwo")

[node name="JohnPNG" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(21.2776, -87.0554)
scale = Vector2(22.5937, 22.5937)
texture = ExtResource("2_usxrx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(32.4999, -74.1658)
shape = SubResource("RectangleShape2D_tthqj")

[node name="ExclamationMark" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(-6.10352e-05, -527.22)
scale = Vector2(14.3666, 14.3666)
texture = ExtResource("3_uplsv")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
